# sid

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION  LICENSE  MANIFEST.in  README.md  README.rst  codecov.yml  environment.yml  install_jupyter_formatter.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
.conda/: meta.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  feature_request.md
.github/workflows/: continuous-integration-workflow.yml
docs/: environment.yml  rtd_environment.yml  test_notebooks.py
docs/source/: api.rst  caveats.rst  changes.rst  conf.py  contact_models.rst  index.rst  params.rst  policies.rst  states.rst
example/: initial_states.csv  run_sid.py  stats.pickle
sid/: __init__.py  config.py  contact_models.py  contacts.py  covid_epi_params.csv  events.py  fake_contacts.csv  fake_states.csv  get_contacts.py  get_dangerous_contacts.py  matching_probabilities.py  msm.py  params.csv  parse_model.py  pathogenesis.py  shared.py  simulate.py  transition_matrices.py  update_states.py  visualize_simulation_results.py
sid/tests/: conftest.py  test_contacts.py  test_matching_probabilities.py  test_params.csv  test_pathogenesis.py  test_shared.py  test_simulate.py  test_states.csv  test_transition_matrices.py  test_visualize_simulation_results.py
simulator/: get_contacts.py  get_dangerous_contacts.py  get_initial_states.py  params.csv  update_states.py
src/sid/: __init__.py  _version.py  colors.py  config.py  contacts.py  countdowns.py  covid_epi_params.csv  events.py  immunity.py  inference_data.py  initial_conditions.py  matching_probabilities.py  msm.py  parallel.py  parse_model.py  pathogenesis.py  plotting.py  policies.py  preparation.py  rapid_tests.py  seasonality.py  shared.py  simulate.py  statistics.py  susceptibility.py  testing.py  testing_allocation.py  testing_demand.py  testing_processing.py  time.py  update_states.py  vaccination.py  validation.py  virus_strains.py  visualize_simulation_results.py
tests/: conftest.py  resources.py  test_calculate_random_infections.py  test_calculate_recurrent_infections.py  test_contacts.py  test_events.py  test_initial_conditions.py  test_matching_probabilities.py  test_msm.py  test_params.csv  test_parse_model.py  test_pathogenesis.py  test_plotting.py  test_policies.py  test_rapid_tests.py  test_seasonality.py  test_shared.py  test_simulate.py  test_states.csv  test_statistics.py  test_susceptibility.py  test_testing_allocation.py  test_testing_demand.py  test_testing_processing.py  test_time.py  test_update_states.py  test_vaccination.py  test_validation.py  test_virus_strains.py  test_visualize_simulation_results.py
tests/simulation_results/: 1.parquet
tests/test_contacts/: test_calculate_infections_numba_with_single_group_0_.csv  test_calculate_infections_numba_with_single_group_1_.csv  test_calculate_infections_numba_with_single_group_2_.csv  test_calculate_infections_numba_with_single_group_3_.csv  test_calculate_infections_numba_with_single_group_4_.csv  test_calculate_infections_numba_with_single_group_5_.csv  test_calculate_infections_numba_with_single_group_6_.csv  test_calculate_infections_numba_with_single_group_7_.csv  test_calculate_infections_numba_with_single_group_8_.csv  (+1 more)
(+54 files in other folders)
