[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]

[tool.setuptools_scm]
write_to = "src/sid/_version.py"

[tool.nbqa.config]
isort = "setup.cfg"
black = "pyproject.toml"

[tool.nbqa.mutate]
isort = 1
black = 1
pyupgrade = 1

[tool.nbqa.addopts]
isort = ["--treat-comment-as-code", "# %%", "--profile=black"]
pyupgrade = ["--py36-plus"]
