[metadata]
name = sid_dev
description = Simulate the spread of COVID-19 with different policies.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/covid-19-impact-lab/sid
author = Janos Gabler, Tobias Raabe, Klara Roehrl
author_email = janos.gabler@gmail.com
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
project_urls =
    Changelog = https://sid-dev.readthedocs.io/en/latest/changes.html
    Documentation = https://sid-dev.readthedocs.io/en/latest
    Github = https://github.com/covid-19-impact-lab/sid
    Tracker = https://github.com/covid-19-impact-lab/sid/issues

[options]
packages = find:
install_requires =
    bokeh
    dask
    fastparquet!=0.6.1
    holoviews
    matplotlib
    numba>=0.48
    numpy
    pandas>=1
    python-snappy
    seaborn
    tqdm
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/sid/_version.py
